compiler/testData/diagnostics/tests/cast/bare/FromErrorType.fir.kt
// !CHECK_TYPE

class G<T>

fun foo(p: <!UNRESOLVED_REFERENCE!>P<!>) {
    val v = p as G?
    checkSubtype<G<*>>(v!!)
}